--- a/Initial.storyboard
+++ b/Initial.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dmI-iP-5tr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C40a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dmI-iP-5tr">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
         <!--Initial Screen View Controller-->
@@ -34,10 +34,10 @@
                                 <exclude reference="pBh-CK-eHc"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="1O8-CH-bvs"/>
                                 <exclude reference="2gZ-FG-OFA"/>
                                 <exclude reference="O2h-lg-QaN"/>
                                 <exclude reference="oUv-gE-wRI"/>
-                                <exclude reference="1O8-CH-bvs"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -45,10 +45,10 @@
                                 <include reference="pBh-CK-eHc"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="1O8-CH-bvs"/>
                                 <include reference="2gZ-FG-OFA"/>
                                 <include reference="O2h-lg-QaN"/>
                                 <include reference="oUv-gE-wRI"/>
-                                <include reference="1O8-CH-bvs"/>
                             </mask>
                         </variation>
                     </view>
