--- a/Sixer/Base.lproj/Main.storyboard
+++ b/Sixer/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15C40a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -527,6 +527,9 @@
                                     <barButtonItem systemItem="done" id="RNf-20-JGg">
                                         <connections>
                                             <action selector="onDoneButtonTapped:" destination="Jti-Aj-Xaq" id="5bk-ui-XEz"/>
+                                            <segue destination="49e-Tb-3d3" kind="popoverPresentation" popoverAnchorBarButtonItem="RNf-20-JGg" id="ZRh-zu-Zo2">
+                                                <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                            </segue>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -595,45 +598,45 @@
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="utv-9f-Dbb" firstAttribute="leading" secondItem="ika-LR-kUF" secondAttribute="leading" id="0Ji-cZ-ugM"/>
                             <constraint firstItem="utv-9f-Dbb" firstAttribute="top" secondItem="gIL-e2-6ZU" secondAttribute="bottom" id="0Xm-nu-r5x"/>
                             <constraint firstAttribute="bottom" secondItem="ika-LR-kUF" secondAttribute="bottom" id="218-4x-f0O"/>
-                            <constraint firstItem="utv-9f-Dbb" firstAttribute="top" secondItem="JdC-VG-mQr" secondAttribute="top" id="8PW-2w-g69"/>
-                            <constraint firstItem="ika-LR-kUF" firstAttribute="top" secondItem="utv-9f-Dbb" secondAttribute="bottom" constant="49" id="DSf-tu-ebF"/>
-                            <constraint firstItem="utv-9f-Dbb" firstAttribute="leading" secondItem="ika-LR-kUF" secondAttribute="leading" id="ER9-lM-yPk"/>
-                            <constraint firstItem="utv-9f-Dbb" firstAttribute="leading" secondItem="JdC-VG-mQr" secondAttribute="leading" id="EjP-VE-gyD"/>
+                            <constraint firstItem="utv-9f-Dbb" firstAttribute="bottom" secondItem="ika-LR-kUF" secondAttribute="top" id="7Cu-Os-lVu"/>
                             <constraint firstItem="ika-LR-kUF" firstAttribute="trailing" secondItem="utv-9f-Dbb" secondAttribute="trailing" id="FQe-9v-crx"/>
+                            <constraint firstItem="utv-9f-Dbb" firstAttribute="leading" secondItem="JdC-VG-mQr" secondAttribute="leading" id="Hog-uO-KO7"/>
                             <constraint firstItem="utv-9f-Dbb" firstAttribute="leading" secondItem="ika-LR-kUF" secondAttribute="leading" id="ISB-M8-DTZ"/>
                             <constraint firstItem="utv-9f-Dbb" firstAttribute="leading" secondItem="JdC-VG-mQr" secondAttribute="leading" id="KQt-WO-yBx"/>
                             <constraint firstAttribute="trailing" secondItem="ika-LR-kUF" secondAttribute="trailing" id="O1D-B5-SZy"/>
-                            <constraint firstItem="ika-LR-kUF" firstAttribute="trailing" secondItem="utv-9f-Dbb" secondAttribute="trailing" id="Xhg-Hp-r38"/>
+                            <constraint firstItem="utv-9f-Dbb" firstAttribute="trailing" secondItem="ika-LR-kUF" secondAttribute="trailing" id="Wgo-2Z-6Cz"/>
                             <constraint firstAttribute="trailing" secondItem="ika-LR-kUF" secondAttribute="trailing" id="ZZZ-sm-s6a"/>
+                            <constraint firstItem="utv-9f-Dbb" firstAttribute="top" secondItem="gIL-e2-6ZU" secondAttribute="bottom" id="Zvp-vh-QSP"/>
                             <constraint firstItem="ika-LR-kUF" firstAttribute="bottom" secondItem="BYu-Vg-Yqd" secondAttribute="top" id="afs-MC-JUh"/>
                             <constraint firstItem="ika-LR-kUF" firstAttribute="top" secondItem="utv-9f-Dbb" secondAttribute="bottom" id="vOJ-z9-3WI"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="8PW-2w-g69"/>
-                                <exclude reference="ER9-lM-yPk"/>
-                                <exclude reference="EjP-VE-gyD"/>
-                                <exclude reference="DSf-tu-ebF"/>
+                                <exclude reference="0Ji-cZ-ugM"/>
+                                <exclude reference="7Cu-Os-lVu"/>
+                                <exclude reference="Hog-uO-KO7"/>
+                                <exclude reference="Wgo-2Z-6Cz"/>
+                                <exclude reference="Zvp-vh-QSP"/>
                                 <exclude reference="O1D-B5-SZy"/>
-                                <exclude reference="Xhg-Hp-r38"/>
                                 <exclude reference="afs-MC-JUh"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="constraints">
+                                <include reference="0Ji-cZ-ugM"/>
                                 <exclude reference="0Xm-nu-r5x"/>
-                                <include reference="8PW-2w-g69"/>
-                                <include reference="ER9-lM-yPk"/>
-                                <include reference="EjP-VE-gyD"/>
+                                <include reference="7Cu-Os-lVu"/>
+                                <include reference="Hog-uO-KO7"/>
                                 <exclude reference="ISB-M8-DTZ"/>
                                 <exclude reference="KQt-WO-yBx"/>
+                                <include reference="Wgo-2Z-6Cz"/>
+                                <include reference="Zvp-vh-QSP"/>
                                 <exclude reference="218-4x-f0O"/>
-                                <include reference="DSf-tu-ebF"/>
                                 <exclude reference="FQe-9v-crx"/>
                                 <include reference="O1D-B5-SZy"/>
-                                <include reference="Xhg-Hp-r38"/>
                                 <exclude reference="ZZZ-sm-s6a"/>
                                 <include reference="afs-MC-JUh"/>
                                 <exclude reference="vOJ-z9-3WI"/>
@@ -647,7 +650,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MEc-D5-H4B" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="746" y="1362"/>
+            <point key="canvasLocation" x="745.5" y="1362"/>
         </scene>
         <!--Group View Controller-->
         <scene sceneID="Khy-Ve-HOQ">
@@ -1334,9 +1337,9 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="SVt-7D-2de" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
-                        <segue destination="Rbe-d1-8Ht" kind="relationship" relationship="viewControllers" id="tEY-TQ-VeG"/>
-                        <segue destination="VKG-C8-W9W" kind="relationship" relationship="viewControllers" id="VbG-mX-jZC"/>
+                        <segue destination="Rbe-d1-8Ht" kind="relationship" relationship="viewControllers" id="c0I-yb-ADU"/>
+                        <segue destination="SVt-7D-2de" kind="relationship" relationship="viewControllers" id="KQY-Xi-ctc"/>
+                        <segue destination="VKG-C8-W9W" kind="relationship" relationship="viewControllers" id="fnN-Sq-k0h"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -2607,7 +2610,7 @@
         <image name="exercise" width="50" height="50"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="5nG-QP-dAx"/>
+        <segue reference="ZRh-zu-Zo2"/>
         <segue reference="Gvf-mf-uoJ"/>
         <segue reference="VWd-I0-Px7"/>
     </inferredMetricsTieBreakers>
